--- a/p8105_hw5_yz4186.Rmd
+++ b/p8105_hw5_yz4186.Rmd
@@ -6,25 +6,172 @@ output: github_document
 ---
 
 ```{r setup, include=FALSE}
+library (readr)
+library(tidyverse)
 
+knitr::opts_chunk$set(
+  fig.width = 6,
+  fig.asp = .6,
+  out.width = "90%"
+)
+
+theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+options(
+  ggplot2.continuous.colour = "viridis",
+  ggplot2.continuous.fill = "viridis"
+)
+
+scale_colour_discrete = scale_colour_viridis_d
+scale_fill_discrete = scale_fill_viridis_d
 ```
 
-## R Markdown
+## Problem 1
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
+urlfile = "https://raw.githubusercontent.com/washingtonpost/data-homicides/master/homicide-data.csv"
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+```
+#### a) Describe the raw data. Create a city_state variable (e.g. “Baltimore, MD”) and then summarize within cities to obtain the total number of homicides and the number of unsolved homicides (those for which the disposition is “Closed without arrest” or “Open/No arrest”).
 
-```{r cars}
-summary(cars)
+```{r}
+homocide_df = read_csv(url(urlfile), na = c("", "Unknown")) %>%  
+  ## mutate "city_state and disposition
+  mutate(city_state = str_c(city, state),
+         resolution = case_when(
+           disposition == "Closed without arrest" ~ "unsolved",
+           disposition == "Open/No arrest"        ~ "unsolved",
+           disposition == "Closed by arrest"      ~ "solved"
+        )) %>% 
+  relocate(city_state) %>% 
+  filter(city_state != "TulsalAL") 
 ```
 
-## Including Plots
-
-You can also embed plots, for example:
-
-```{r pressure, echo=FALSE}
-plot(pressure)
+```{r}
+homocide_df %>%  count(city_state) %>% view
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+#### b) For the city of Baltimore, MD, use the prop.test function to estimate the proportion of homicides that are unsolved; save the output of prop.test as an R object, apply the broom::tidy to this object and pull the estimated proportion and confidence intervals from the resulting tidy dataframe.
+
+Let's focus on Baltimore, MD.
+
+```{r}
+## for the city of Baltimore, MD
+baltimore_df = 
+  homocide_df %>% 
+  filter(city_state == "BaltimoreMD")
+
+## for the homocides that are unsolved
+baltimore_summary = 
+baltimore_df %>% 
+  summarize(
+    unsolved = sum(resolution == "unsolved"),
+    n = n()
+  ) 
+
+## do the prop test
+baltimore_test = 
+prop.test(
+  x = baltimore_summary %>%  pull(unsolved),
+  n = baltimore_summary %>%  pull(n))
+
+baltimore_test %>% 
+  broom::tidy()
+```
+
+#### c) Now run prop.test for each of the cities in your dataset, and extract both the proportion of unsolved homicides and the confidence interval for each. Do this within a “tidy” pipeline, making use of purrr::map, purrr::map2, list columns and unnest as necessary to create a tidy dataframe with estimated proportions and CIs for each city.
+
+Let's try to iterate across the city!
+
+```{r}
+
+prop_test_function = function(city_df){
+  
+  city_summary =
+    city_df %>% 
+    summarize(
+      unsolved = sum(resolution == "unsolved"),
+      n = n()
+  )
+
+   city_test = 
+    prop.test(
+      x = city_summary %>% pull(unsolved),
+      n = city_summary %>% pull(n))
+    
+    return(city_test)
+    
+}
+
+prop_test_function(baltimore_df)
+  
+  
+
+```
+#### d) Create a plot that shows the estimates and CIs for each city – check out geom_errorbar for a way to add error bars based on the upper and lower limits. Organize cities according to the proportion of unsolved homicides.
+
+Now Let's iterate across all cities.
+
+```{r}
+homocide_df %>% 
+  nest( data = -uid:resolution)
+```
+Now, let's iterate across all cities.
+
+```{r}
+nested_df = 
+  homocide_df %>% 
+  nest(data = uid:resolution) %>% 
+  mutate(
+    test_results = map(data, prop_test_function)
+  )
+  
+nested_df %>% 
+  filter(city_state == "BeltimoreMD") %>% 
+  pull(test_results)
+```
+
+## Problem 2
+
+a) Start with a dataframe containing all file names; the list.files function will help
+b) Iterate over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
+
+```{r, message = FALSE}
+## list the files
+study_df <-
+  tibble(
+    file = list.files("data")
+  )
+## generate the new var 
+setwd('data')
+study_df <-
+  study_df %>%
+  mutate(data = purrr::map(pull(., file), read_csv))
+```
+
+c) Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary
+
+```{r  message = FALSE}
+study_df = 
+  study_df %>%
+  unnest() %>% 
+## manipulate the file name to "arm control" and "subject id"
+  mutate(subject_id = substr(file, 1, 6),
+         control_arm = substr(file, 1, 3)) %>% 
+## pivot the data
+  select(-file) %>% 
+  pivot_longer(week_1: week_8, values_to = "values", names_to = "week", 
+               names_prefix = "week_") %>% 
+  relocate(control_arm, subject_id)
+```
+
+d) Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+
+```{r}
+study_df %>%
+  ggplot(aes(x = week, y = values)) +
+  geom_line(aes(group = subject_id, color = control_arm)) +
+  theme_light() 
+```
+
+
