--- a/p8105_hw5_yz4186.Rmd
+++ b/p8105_hw5_yz4186.Rmd
@@ -5,7 +5,7 @@ date: "11/20/2021"
 output: github_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup}
 library (readr)
 library(tidyverse)
 
@@ -35,7 +35,7 @@ urlfile = "https://raw.githubusercontent.com/washingtonpost/data-homicides/maste
 #### a) Describe the raw data. Create a city_state variable (e.g. “Baltimore, MD”) and then summarize within cities to obtain the total number of homicides and the number of unsolved homicides (those for which the disposition is “Closed without arrest” or “Open/No arrest”).
 
 ```{r}
-homocide_df = read_csv(url(urlfile), na = c("", "Unknown")) %>%  
+homicide_df = read_csv(url(urlfile), na = c("", "Unknown")) %>%  
   ## mutate "city_state and disposition
   mutate(city_state = str_c(city, state),
          resolution = case_when(
@@ -48,7 +48,7 @@ homocide_df = read_csv(url(urlfile), na = c("", "Unknown")) %>%
 ```
 
 ```{r}
-homocide_df %>%  count(city_state) %>% view
+homicide_df %>%  count(city_state) 
 ```
 
 #### b) For the city of Baltimore, MD, use the prop.test function to estimate the proportion of homicides that are unsolved; save the output of prop.test as an R object, apply the broom::tidy to this object and pull the estimated proportion and confidence intervals from the resulting tidy dataframe.
@@ -57,84 +57,48 @@ Let's focus on Baltimore, MD.
 
 ```{r}
 ## for the city of Baltimore, MD
-baltimore_df = 
-  homocide_df %>% 
-  filter(city_state == "BaltimoreMD")
-
-## for the homocides that are unsolved
-baltimore_summary = 
-baltimore_df %>% 
+homicount_df =
+  homicide_df %>% 
+  group_by(city_state) %>% 
   summarize(
-    unsolved = sum(resolution == "unsolved"),
-    n = n()
-  ) 
-
-## do the prop test
-baltimore_test = 
-prop.test(
-  x = baltimore_summary %>%  pull(unsolved),
-  n = baltimore_summary %>%  pull(n))
-
-baltimore_test %>% 
-  broom::tidy()
+    hom_total = n(),
+    hom_unsolved = sum(resolution == "unsolved")
+  )
 ```
+
 
 #### c) Now run prop.test for each of the cities in your dataset, and extract both the proportion of unsolved homicides and the confidence interval for each. Do this within a “tidy” pipeline, making use of purrr::map, purrr::map2, list columns and unnest as necessary to create a tidy dataframe with estimated proportions and CIs for each city.
 
-Let's try to iterate across the city!
+iterate across the cities...
 
 ```{r}
-
-prop_test_function = function(city_df){
-  
-  city_summary =
-    city_df %>% 
-    summarize(
-      unsolved = sum(resolution == "unsolved"),
-      n = n()
-  )
-
-   city_test = 
-    prop.test(
-      x = city_summary %>% pull(unsolved),
-      n = city_summary %>% pull(n))
-    
-    return(city_test)
-    
-}
-
-prop_test_function(baltimore_df)
-  
-  
-
+result_df = 
+  homicount_df %>% 
+   mutate(
+     prop_tests = map2(.x = hom_unsolved, .y = hom_total, ~prop.test(x = .x, n =.y)),
+     tidy_tests = map(.x = prop_tests, ~broom::tidy(.x))
+   ) %>% 
+  select(-prop_tests) %>% 
+  unnest(tidy_tests) %>% 
+  select(city_state, estimate, conf.low, conf.high)
 ```
-#### d) Create a plot that shows the estimates and CIs for each city – check out geom_errorbar for a way to add error bars based on the upper and lower limits. Organize cities according to the proportion of unsolved homicides.
 
-Now Let's iterate across all cities.
+make a plot!
 
 ```{r}
-homocide_df %>% 
-  nest( data = -uid:resolution)
+result_df %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate)) +
+  geom_point() +
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) +
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
-Now, let's iterate across all cities.
 
-```{r}
-nested_df = 
-  homocide_df %>% 
-  nest(data = uid:resolution) %>% 
-  mutate(
-    test_results = map(data, prop_test_function)
-  )
-  
-nested_df %>% 
-  filter(city_state == "BeltimoreMD") %>% 
-  pull(test_results)
-```
 
 ## Problem 2
 
-a) Start with a dataframe containing all file names; the list.files function will help
-b) Iterate over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
+#### a) Start with a dataframe containing all file names; the list.files function will help
+#### b) Iterate over file names and read in data for each subject using purrr::map and saving the result as a new variable in the dataframe
 
 ```{r, message = FALSE}
 ## list the files
@@ -149,7 +113,7 @@ study_df <-
   mutate(data = purrr::map(pull(., file), read_csv))
 ```
 
-c) Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary
+#### c) Tidy the result; manipulate file names to include control arm and subject ID, make sure weekly observations are “tidy”, and do any other tidying that’s necessary
 
 ```{r  message = FALSE}
 study_df = 
@@ -160,18 +124,70 @@ study_df =
          control_arm = substr(file, 1, 3)) %>% 
 ## pivot the data
   select(-file) %>% 
-  pivot_longer(week_1: week_8, values_to = "values", names_to = "week", 
+  pivot_longer(week_1: week_8, values_to = "data", names_to = "week", 
                names_prefix = "week_") %>% 
   relocate(control_arm, subject_id)
 ```
 
-d) Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+#### d) Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
 
 ```{r}
 study_df %>%
-  ggplot(aes(x = week, y = values)) +
-  geom_line(aes(group = subject_id, color = control_arm)) +
-  theme_light() 
+  ggplot(aes(x = week, y = data)) +
+  geom_line(aes(group = subject_id, color = control_arm)) 
 ```
+Comment: The experiment group has an overall higher values than the control group.
+
+## Problem 3
+
+#### The purpose of this problem is to fill in those missing values.
+
+load the data.
+
+```{r}
+library(tidyverse)
+set.seed(10)
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+```
+
+#### a) For numeric variables, you should fill in missing values with the mean of non-missing values
+#### b) For character variables, you should fill in missing values with "virginica"
+
+```{r}
+fill_in = function(vector) {
+## for numeric variables, fill in NA with the mean of non-missing values
+  if (is.numeric(vector)) {
+    vector = replace(vector, is.na(vector), mean(vector, na.rm = TRUE))
+  }
+## for character variables, fill in NA with "virginica"
+  else if (is.character(vector)) {
+    vector = replace(vector, is.na(vector), "virginica")
+  }
+  
+  else {
+    stop("Input must be either numeric or character")
+  }
+  
+  return(vector)
+  
+}
+```
+
+apply the function
+
+```{r}
+iris_with_missing = 
+  iris_with_missing %>% 
+  map_df(~ fill_in(.))
+```
+```
+
+
+
+
+
+
 
 
